src/objects/Survey_Target__c.object
<CustomObject>
    <description>To store surveys initiated by Reps</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Account Name - used for reporting in Qualtrics</description>
        <formula>Account__r.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <description>Account Number - used for reporting in Qualtrics</description>
        <formula>Account__r.Account_Number__c</formula>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account related to survey</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Survey Targets</relationshipLabel>
        <relationshipName>Survey_Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Area_Vice_President__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Area Vice President for the Survey</description>
        <label>Area Vice President</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Survey_Targets_AVP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Any comments that RBM or AVP wants to capture</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Department__c</fullName>
        <description>Contact Department - used in Qualtrics reports</description>
        <formula>TEXT(Contact__r.Department__c)</formula>
        <label>Contact Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <description>Email of address of contact used for survey emailing</description>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Job_Title__c</fullName>
        <description>Contact Job Title - used in qualtrics reports</description>
        <formula>TEXT(Contact__r.Job_Title__c)</formula>
        <label>Contact Job Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <description>Phone number of contact</description>
        <formula>Contact__r.Phone</formula>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Contact related survey</description>
        <label>Contact</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>Please choose a contact with Email address.</errorMessage>
            <filterItems>
                <field>Contact.Email</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Survey Targets</relationshipLabel>
        <relationshipName>Survey_Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Days_Since_Survey_Sent__c</fullName>
        <description>No. of days passed after survey sent</description>
        <formula>BLANKVALUE(TODAY() - DATEVALUE(Survey_Sent_Date__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Survey Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Detractor__c</fullName>
        <description>Set 1 if NPS Value &lt;= 6</description>
        <formula>IF ((NOT(ISBLANK(NPS_Value__c))) &amp;&amp;  ISPICKVAL(Status__c,&apos;Completed&apos;) &amp;&amp; NPS_Value__c &lt;=6,1,NULL)</formula>
        <label>Detractor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Created_Date__c</fullName>
        <description>Created date of Event initiating survey</description>
        <label>Event Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Created_by_Alias__c</fullName>
        <description>Baxter Alias of Event Creator</description>
        <label>Event Created by Alias</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <description>Type of Event initiating survey</description>
        <label>Event Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Firstname__c</fullName>
        <description>Contact First Name</description>
        <formula>Contact__r.FirstName</formula>
        <label>Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Franchise__c</fullName>
        <description>Franchise for whom this survey was created</description>
        <formula>RecordType.Name</formula>
        <label>Franchise</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <description>Contact Last Name</description>
        <formula>Contact__r.LastName</formula>
        <label>Contact Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPS_Value__c</fullName>
        <description>Response value of question that contributes to Net Promoter Score in the survey</description>
        <inlineHelpText>Response value of question that contributes to Net Promoter Score in the survey</inlineHelpText>
        <label>NPS Value</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opt_Out_Reason__c</fullName>
        <description>Customer reason for opting out from NPS Survey</description>
        <label>Opt Out Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Opt Out identifier. Checked means opted out.</description>
        <label>Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Passive__c</fullName>
        <description>Passive response where score is 7 or 8</description>
        <formula>IF ((NOT(ISBLANK(NPS_Value__c))) &amp;&amp; ISPICKVAL(Status__c,&apos;Completed&apos;) &amp;&amp; (NPS_Value__c =7 || NPS_Value__c =8) ,1,NULL)</formula>
        <label>Passive</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Promotor__c</fullName>
        <description>Set 1 if NPS Value is &gt;= 9</description>
        <formula>IF ((NOT(ISBLANK(NPS_Value__c))) &amp;&amp;  ISPICKVAL(Status__c,&apos;Completed&apos;) &amp;&amp; NPS_Value__c   &gt;=9,1,NULL)</formula>
        <label>Promotor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recipient_Id__c</fullName>
        <description>Recipient ID of third party survey system</description>
        <label>Recipient Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Business_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Regional Business Manager</description>
        <label>Regional Business Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Survey_Target_RBM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Responded__c</fullName>
        <description>Value 1 if Survey is responded else 0</description>
        <formula>IF( TEXT(Status__c) = &apos;Completed&apos; &amp;&amp;  NPS_Value__c &gt;= 0, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Responded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Category__c</fullName>
        <description>Response Category -</description>
        <formula>CASE(NPS_Value__c,
0, &apos;Detractor&apos;, 
1, &apos;Detractor&apos;,
2, &apos;Detractor&apos;,
3, &apos;Detractor&apos;,
4, &apos;Detractor&apos;,
5, &apos;Detractor&apos;,
6, &apos;Detractor&apos;,
7, &apos;Passive&apos;,
8, &apos;Passive&apos;,
9, &apos;Promoter&apos;,
10, &apos;Promoter&apos;,
 &apos;&apos;)</formula>
        <label>Response Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Count__c</fullName>
        <description>Number of responses for this survey responses</description>
        <inlineHelpText>Number of responses for this survey responses</inlineHelpText>
        <label>Response Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Root_Cause__c</fullName>
        <description>To capture root cause in case of detractor</description>
        <label>Root Cause</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contracts/Compliance</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>Sales Representative</fullName>
                </value>
                <value>
                    <fullName>Supply</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Group__c</fullName>
        <description>Sales Group Survey belongs to</description>
        <inlineHelpText>Sales Group Survey belongs to</inlineHelpText>
        <label>Sales Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Record_Id__c</fullName>
        <description>SFDC Id of record which initiated survey</description>
        <label>Source Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Survey status</description>
        <inlineHelpText>Survey Status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Initiated</fullName>
                </value>
                <value>
                    <fullName>NoResponse</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Pilot</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Completed_Date__c</fullName>
        <description>Survey Completed Date</description>
        <inlineHelpText>Survey Completed Date</inlineHelpText>
        <label>Survey Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Survey_Sent_Date__c</fullName>
        <description>Survey Sent Date</description>
        <label>Survey Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Survey_Type__c</fullName>
        <description>Type of Survey</description>
        <label>Survey Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NPS</fullName>
                    <default>true</default>
                    <label>NPS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TBM_Alias__c</fullName>
        <description>TBM Alias - used in qualtrics reports</description>
        <formula>Territory_Business_Manager__r.Baxter_Alias__c</formula>
        <label>TBM Alias</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TBM_First_Name__c</fullName>
        <description>TBM Name - used in qualtrics reports</description>
        <formula>Territory_Business_Manager__r.FirstName</formula>
        <label>TBM First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TBM_Last_Name__c</fullName>
        <description>TBM Last Name - used by qualtrics report</description>
        <formula>Territory_Business_Manager__r.LastName</formula>
        <label>TBM Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Business_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Territory Business Manager associated with Survey</description>
        <label>Territory Business Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Survey_Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory_Up_Level1__c</fullName>
        <description>Region Code</description>
        <inlineHelpText>Region Code</inlineHelpText>
        <label>Region</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Up_Level2__c</fullName>
        <description>Area Code</description>
        <inlineHelpText>Area Code</inlineHelpText>
        <label>Area</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <description>Territory code</description>
        <inlineHelpText>Territory Code</inlineHelpText>
        <label>Territory</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Survey Target</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>NPS_Value__c</columns>
        <columns>Status__c</columns>
        <columns>Survey_Sent_Date__c</columns>
        <columns>Survey_Completed_Date__c</columns>
        <columns>Territory__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ST-{00000}</displayFormat>
        <label>Survey Target Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Targets</pluralLabel>
    <recordTypes>
        <fullName>Advanced_Surgery</fullName>
        <active>true</active>
        <description>Survey for Advanced Surgery</description>
        <label>Advanced Surgery</label>
    </recordTypes>
    <recordTypes>
        <fullName>Renal</fullName>
        <active>true</active>
        <description>Survey for Renal</description>
        <label>Renal</label>
    </recordTypes>
    <recordTypes>
        <fullName>USHP</fullName>
        <active>true</active>
        <description>Survey for USMD and ACC</description>
        <label>USHP</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>